[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabarena"
version = "0.0.1"
description = "Dataset of model evaluations supporting ensembling and simulation"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "AutoGluon Community" }]
requires-python = ">=3.11,<3.14"

# NOTE: To allow pre-release resolution of AutoGluon with uv, install with:
#   uv pip install --prerelease=allow .
dependencies = [
  # TODO: To use `uv`, you need to do `uv pip install --prerelease=allow .` so it recognizes pre-release AutoGluon
  "autogluon>=1.5,<1.6",  # TODO: Remove after moving `benchmark` code elsewhere
  "bencheval",
  "openml>=0.14.1",  # consider making optional
  "pyyaml",
  "pytest",
  "tqdm",
  "typing-extensions>=4.11,<5",  # used for `Self` type hint
  "huggingface-hub",
  "numpy",
  "pandas",

  # TODO: For 2025 paper, consider making optional
  "tueplots",
  "autorank==1.2.1",
  "seaborn==0.13.2",
  "matplotlib==3.10.1",
  "plotly>=6.3.0",
  # TODO: support such that it does not create 1000s of cache files in home dir
  #     - Otherwise, uninstall.
  "kaleido>=0.2.1,<1",  # for winrate matrix
]

[project.optional-dependencies]
tabpfn = [
  "tabpfn>=6.0.5",       # We used version 6.0.5
]
tabicl = ["tabicl>=2.0.0"]
ebm = ["interpret-core>=0.7.3"]
search_spaces = ["configspace>=1.2,<2.0"]
realmlp = ["pytabkit>=1.5.0,<2.0"]
tabdpt = [
    "tabdpt>=1.1.10",
]
tabm = ["torch"]
modernnca = ["category_encoders"]
xrfm = ["xrfm[cu12]"]
sap-rpt-oss = ["sap_rpt_oss @ git+https://github.com/SAP-samples/sap-rpt-1-oss.git@a323a0aff976fda4ac43c3196a92406de7689aaa"]
tabprep = []

# union of all above extras (mirrors your "benchmark" extra)
benchmark = [
  "tabpfn>=6.0.5",
  "tabicl>=2.0.0",
  "interpret-core>=0.7.3",
  "configspace>=1.2,<2.0",
  "pytabkit>=1.5.0,<2.0",
  "tabdpt>=1.1.10",
  "torch",
  "category_encoders",
  "xrfm[cu12]",
  "sap_rpt_oss @ git+https://github.com/SAP-samples/sap-rpt-1-oss.git@a323a0aff976fda4ac43c3196a92406de7689aaa",
]

[project.urls]
Homepage = "https://github.com/autogluon/tabarena"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["tabarena*"]

[tool.setuptools.package-data]
tabarena = [
  "metrics/_roc_auc_cpp/compile.sh",
  "metrics/_roc_auc_cpp/cpp_auc.cpp",
  "nips2025_utils/metadata/task_metadata_tabarena51.csv",
]
